kustomize/bases/ghostfolio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghostfolio
  labels:
    name: ghostfolio
