kustomize/bases/ghostfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: ghostfolio
    app.kubernetes.io/instance: ghostfolio
    app.kubernetes.io/version: "2.48.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghostfolio
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: ghostfolio
  template:
    metadata:
      # These are not needed by considered a good practice
      labels:
        app.kubernetes.io/name: ghostfolio
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: ghostfolio
        app.kubernetes.io/instance: ghostfolio
        app.kubernetes.io/version: "2.48.1"
    spec:
      containers:
        - name: ghostfolio
          image: ghostfolio/ghostfolio:2.48.1
