kustomize/bases/ghostfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: ghostfolio
    app.kubernetes.io/instance: ghostfolio
    app.kubernetes.io/version: "2.36.0"
spec:
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 3333
  selector:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: ghostfolio
