kustomize/bases/ghostfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghostfolio
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: ghostfolio
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: ghostfolio
    app.kubernetes.io/instance: ghostfolio
    app.kubernetes.io/version: "2.61.1"
  annotations:
    # Use only 80 and 443 entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: ghostfolio.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghostfolio
                port:
                  number: 3333
